[package]
name = "pubkeygen"
version = "0.1.0"
description = ""
edition = "2021"





[dependencies]
solana-program = "<1.17.0"
solana-address-lookup-table-program = "<1.17.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
rayon = "1.10"
rand = "0.8"

bs58 = "0.4"
mysql = "*"
chrono = "0.4"

